# postcard-manager-cpp-winrt

./: .gitattributes  .gitignore  Dockerfile  docker-compose.yml
core/include/: card_repository.hpp  database_service.cpp  database_service.hpp  location_repository.hpp  models.hpp  pch.h  repository_interface.hpp  sqlite_connection.hpp
core/src/: database_service.cpp  location_repository.cpp  sqlite_connection.cpp
core/tests/integration/: pch.h  test_card_repository.cpp  test_database_service.cpp  test_location_repository.cpp  test_sqlite_connection.cpp
core/tests/unit/: pch.h
linux/: CMakeLists.txt
windows/: PostcardManager.sln
windows/Core/: Core.vcxproj  Core.vcxproj.filters
windows/CoreIntegrationTests/: CoreIntegrationTests.vcxproj  CoreIntegrationTests.vcxproj.filters
windows/GUI/: App.cpp  App.h  App.idl  AppTitleBar.cpp  AppTitleBar.h  AppTitleBar.idl  AppTitleBar.xaml  GUI.vcxproj  GUI.vcxproj.filters  Location.cpp  Location.h  Location.idl  LocationView.cpp  LocationView.h  LocationView.idl  LocationView.xaml  LocationViewModel.cpp  LocationViewModel.h  LocationViewModel.idl  Package.appxmanifest  pch.h
windows/GUI/Strings/de-DE/: Resources.resw
windows/GUI/Strings/en-US/: Resources.resw
